[gd_scene load_steps=3 format=3 uid="uid://bc8vqsj7oc3nu"]

[ext_resource type="Script" uid="uid://bunai2l1g5y1a" path="res://Prototype_presentation_8.05.2025/start_menu.gd" id="1_05j7d"]
[ext_resource type="FontFile" uid="uid://ce8p13vjlw5c1" path="res://Prototype_presentation_8.05.2025/m3x6.ttf" id="2_ia0g5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05j7d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.665852, 0.775928, 0.530658, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.643
anchor_top = 0.762
anchor_right = 0.643
anchor_bottom = 0.762
offset_left = -116.76
offset_top = -83.16
offset_right = 23.24
offset_bottom = -10.16
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ColorRect/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ia0g5")
text = "Metabolic Flow"

[node name="Button2" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Micromon"

[node name="Button3" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "OverLab"

[node name="Button4" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
